--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
   "license": "MIT",
   "dependencies": {
     "bootstrap": "3.3.7",
+    "fetch-mock": "5.8.1",
     "jquery": "3.1.1",
     "lodash": "4.17.4",
     "lodash.mapvalues": "4.6.0",
+    "nock": "9.0.2",
     "object-assign": "4.1.0",
     "react": "15.4.1",
     "react-addons-transition-group": "15.4.1",
@@ -43,6 +45,7 @@
     "react-router": "3.0.0",
     "react-router-redux": "4.0.7",
     "redux": "3.6.0",
+    "redux-mock-store": "1.2.1",
     "redux-thunk": "2.1.0",
     "toastr": "2.1.2"
   },
