--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "fetch-mock": "5.8.1",
     "jquery": "3.1.1",
     "lodash": "4.17.4",
+    "lodash.isempty": "4.4.0",
     "lodash.mapvalues": "4.6.0",
     "nock": "9.0.2",
     "object-assign": "4.1.0",
